# premierlytics-data-platform

./: .dockerignore  .gitignore  Makefile  README.md
.github/workflows/: ci.yml
dagster/premierlytics-dagster/: README.md  pyproject.toml
dagster/premierlytics-dagster/config/: README.md  default.yaml  dev.yaml  prod.yaml  seasons.yaml
dagster/premierlytics-dagster/src/premierlytics_dagster/: definitions.py  run_backfill.py  run_pipeline.py
dagster/premierlytics-dagster/src/premierlytics_dagster/defs/: config.py  jobs.py  partitions.py  resources.py  schedules.py
dagster/premierlytics-dagster/src/premierlytics_dagster/defs/dbt/: assets.py  defs.yml  profiles.yml
dagster/premierlytics-dagster/src/premierlytics_dagster/defs/loading/: assets.py  checks.py
dagster/premierlytics-dagster/src/premierlytics_dagster/defs/loading/sql/: create_fixtures.sql  create_matches.sql  create_player_gameweek_stats.sql  create_playermatchstats.sql  create_players.sql  create_playerstats.sql  create_teams.sql
dagster/premierlytics-dagster/src/premierlytics_dagster/defs/raw/: assets.py
dagster/premierlytics-dagster/src/premierlytics_dagster/defs/resources/: __init__.py  duckdb.py  minio.py  s3.py
dagster/premierlytics-dagster/src/premierlytics_dagster/defs/schemas/: fixtures.py  matches.py  player_gameweek_stats.py  playermatchstats.py  players.py  playerstats.py  teams.py
dagster/premierlytics-dagster/src/premierlytics_dagster/defs/transformation/: assets.py  checks.py
dagster/premierlytics-dagster/src/premierlytics_dagster/helpers/: checks.py  clean_data.py  current_gameweek.py  data_report.py  download_csv.py  sql.py  validation.py
dagster/premierlytics-dagster/tests/helpers/: test_checks.py  test_clean_data.py  test_download_csv.py  test_validation.py
dagster/premierlytics-dagster/tests/loading/: test_assets.py
dagster/premierlytics-dagster/tests/raw/: test_assets.py
dagster/premierlytics-dagster/tests/resources/: test_duckdb.py  test_minio.py  test_s3.py
dagster/premierlytics-dagster/tests/transformation/: test_assets.py
docker/: docker-compose.yml
docker/dagster/: Dockerfile.prod  Dockerfile_dagster  Dockerfile_user_code  dagster.yaml  requirements.txt  workspace.yaml
docker/duckdb/: duckdb_init.py
docker/metabase/: Dockerfile
infra/: .terraform.lock.hcl  ec2.tf  ecr.tf  eventbridge.tf  iam.tf  lambda.tf  main.tf  outputs.tf  response.json  s3.tf  variables.tf
infra/scripts/: bootstrap.sh  lambda_function.py
notebooks/: data_modellling.ipynb  eda.ipynb
notebooks/data/: fixtures.parquet
premierlytics_dbt/: README.md  dbt_project.yml
premierlytics_dbt/docs/: mart_er_diagram.mmd
premierlytics_dbt/models/dimensions/: dim_gameweek.sql  dim_match.sql  dim_player.sql  dim_schema.yml  dim_season.sql  dim_team.sql
premierlytics_dbt/models/facts/: fact_match_team_performance.sql  fact_schema.yml  (+2 more)
(+14 files in other folders)
