[project]
name = "premierlytics_dagster"
requires-python = ">=3.12,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.12.17",
    "dagster-dbt>=0.28.17",
    "dagster-postgres>=0.28.17",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.4.4",
    "httpx==0.28.1",
    "minio>=7.2.20",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "typing>=3.10.0.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "pytest>=9.0.2",
    "testcontainers[minio]>=4.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "premierlytics_dagster"
registry_modules = ["premierlytics_dagster.components.*"]
